--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "interface-connection": "~0.3.2",
     "ip-address": "^5.8.6",
     "libp2p-identify": "~0.3.3",
+    "libp2p-circuit": "~0.0.1",
     "lodash.includes": "^4.3.0",
     "multiaddr": "^2.2.2",
     "multistream-select": "~0.13.5",
